@@ -34,7 +34,6 @@ import com.formkiq.aws.dynamodb.model.SearchQuery;
 import com.formkiq.aws.dynamodb.objects.DateUtil;
 import com.formkiq.aws.services.lambda.ApiGatewayRequestEvent;
 import com.formkiq.aws.services.lambda.ApiGatewayRequestEventBuilder;
-import com.formkiq.aws.services.lambda.ApiResponseError;
 import com.formkiq.lambda.apigateway.util.GsonUtil;
 import com.formkiq.module.actions.Action;
 import com.formkiq.module.actions.ActionType;
@@ -60,7 +59,6 @@ import java.time.Month;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
-import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
@@ -89,17 +87,15 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    * 
    * @param prefix {@link String}
    * @param testdatacount int
-   * @throws Exception Exception
    */
-  private void createTestData(final String prefix, final int testdatacount) throws Exception {
+  private void createTestData(final String prefix, final int testdatacount) {
     String userId = "jsmith";
     final int min10 = 10;
     LocalDateTime nowLocalDate = LocalDateTime.now(ZoneOffset.UTC).plusMinutes(min10);
 
-    final int max = testdatacount;
-    for (int i = 0; i < max; i++) {
+    for (int i = 0; i < testdatacount; i++) {
 
-      nowLocalDate = nowLocalDate.plus(1, ChronoUnit.MINUTES);
+      nowLocalDate = nowLocalDate.plusMinutes(1);
       Date d = Date.from(nowLocalDate.atZone(ZoneOffset.UTC).toInstant());
       getDocumentService().saveDocument(prefix, new DocumentItemDynamoDb("doc_" + i, d, userId),
           new ArrayList<>());
@@ -112,11 +108,10 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    * @param next {@link String}
    * @throws IOException IOException
    */
-  @SuppressWarnings("unchecked")
   private void expectNextPage(final String next) throws IOException {
     // given
     try (InputStream in = toStream("/request-get-documents-next.json")) {
-      String input = IoUtils.toUtf8String(in).replaceAll("\\{\\{next\\}\\}", next);
+      String input = IoUtils.toUtf8String(in).replaceAll("\\{\\{next}}", next);
       final InputStream instream2 =
           new ByteArrayInputStream(input.getBytes(StandardCharsets.UTF_8));
       ByteArrayOutputStream outstream = new ByteArrayOutputStream();
@@ -125,7 +120,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       getHandler().handleRequest(instream2, outstream, getMockContext());
 
       // then
-      String response = new String(outstream.toByteArray(), "UTF-8");
+      String response = outstream.toString(StandardCharsets.UTF_8);
 
       Map<String, String> m = fromJson(response, Map.class);
       DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
@@ -149,7 +144,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleDeleteDocument01() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -170,12 +164,12 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      Map<String, String> m = fromJson(response, Map.class);
+      Map<String, Object> m = fromJson(response, Map.class);
 
       final int mapsize = 3;
       assertEquals(mapsize, m.size());
       assertEquals("200.0", String.valueOf(m.get("statusCode")));
-      assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
 
       assertFalse(getS3().getObjectMetadata(BUCKET_NAME, s3Key, null).isObjectExists());
       assertNull(getDocumentService().findDocument(siteId, documentId));
@@ -187,7 +181,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleDeleteDocument02() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -218,7 +211,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleDeleteDocument03() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -233,12 +225,12 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      Map<String, String> m = fromJson(response, Map.class);
+      Map<String, Object> m = fromJson(response, Map.class);
 
       final int mapsize = 3;
       assertEquals(mapsize, m.size());
       assertEquals("404.0", String.valueOf(m.get("statusCode")));
-      assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
     }
   }
 
@@ -247,7 +239,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments01() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -257,7 +248,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String username = UUID.randomUUID() + "@formkiq.com";
       String documentId = ID.uuid();
       DocumentItemDynamoDb item = new DocumentItemDynamoDb(documentId, date, username);
-      item.setContentLength(Long.valueOf(contentLength));
+      item.setContentLength(contentLength);
 
       ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents.json");
       addParameter(event, "siteId", siteId);
@@ -268,13 +259,13 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      Map<String, String> m = fromJson(response, Map.class);
+      Map<String, Object> m = fromJson(response, Map.class);
 
       final int mapsize = 3;
       assertEquals(mapsize, m.size());
       assertEquals("200.0", String.valueOf(m.get("statusCode")));
-      assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-      DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
+      DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
       List<DynamicObject> documents = resp.getList("documents");
       assertEquals(1, documents.size());
@@ -292,7 +283,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments02() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -310,15 +300,14 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
         getHandler().handleRequest(instream, outstream, getMockContext());
 
         // then
-        String response = new String(outstream.toByteArray(), "UTF-8");
-        Map<String, String> m = fromJson(response, Map.class);
+        String response = outstream.toString(StandardCharsets.UTF_8);
+        Map<String, Object> m = fromJson(response, Map.class);
 
         final int mapsize = 3;
         assertEquals(mapsize, m.size());
         assertEquals("200.0", String.valueOf(m.get("statusCode")));
-        assertEquals(getHeaders(),
-            "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-        DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+        assertCorsHeaders((Map<String, Object>) m.get("headers"));
+        DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
         List<DynamicObject> documents = resp.getList("documents");
         assertEquals(DocumentService.MAX_RESULTS, documents.size());
@@ -335,7 +324,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments03() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -353,15 +341,14 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
         getHandler().handleRequest(instream, outstream, getMockContext());
 
         // then
-        String response = new String(outstream.toByteArray(), "UTF-8");
-        Map<String, String> m = fromJson(response, Map.class);
+        String response = outstream.toString(StandardCharsets.UTF_8);
+        Map<String, Object> m = fromJson(response, Map.class);
 
         final int mapsize = 3;
         assertEquals(mapsize, m.size());
         assertEquals("200.0", String.valueOf(m.get("statusCode")));
-        assertEquals(getHeaders(),
-            "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-        DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+        assertCorsHeaders((Map<String, Object>) m.get("headers"));
+        DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
         List<DynamicObject> documents = resp.getList("documents");
         assertEquals(DocumentService.MAX_RESULTS, documents.size());
@@ -376,7 +363,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments04() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -395,13 +381,13 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      Map<String, String> m = fromJson(response, Map.class);
+      Map<String, Object> m = fromJson(response, Map.class);
 
       final int mapsize = 3;
       assertEquals(mapsize, m.size());
       assertEquals("200.0", String.valueOf(m.get("statusCode")));
-      assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-      DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
+      DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
       List<DynamicObject> documents = resp.getList("documents");
       assertEquals(0, documents.size());
@@ -413,7 +399,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments05() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -432,13 +417,13 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      Map<String, String> m = fromJson(response, Map.class);
+      Map<String, Object> m = fromJson(response, Map.class);
 
       final int mapsize = 3;
       assertEquals(mapsize, m.size());
       assertEquals("200.0", String.valueOf(m.get("statusCode")));
-      assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-      DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
+      DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
       List<DynamicObject> documents = resp.getList("documents");
       assertEquals(1, documents.size());
@@ -450,7 +435,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments06() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -473,13 +457,13 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      Map<String, String> m = fromJson(response, Map.class);
+      Map<String, Object> m = fromJson(response, Map.class);
 
       final int mapsize = 3;
       assertEquals(mapsize, m.size());
       assertEquals("200.0", String.valueOf(m.get("statusCode")));
-      assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-      DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
+      DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
       List<DynamicObject> documents = resp.getList("documents");
       assertEquals(1, documents.size());
@@ -491,7 +475,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments07() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -508,10 +491,10 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String documentId0 = ID.uuid();
       String documentId1 = ID.uuid();
       DocumentItemDynamoDb item0 = new DocumentItemDynamoDb(documentId0, date0, username);
-      item0.setContentLength(Long.valueOf(contentLength));
+      item0.setContentLength(contentLength);
 
       DocumentItemDynamoDb item1 = new DocumentItemDynamoDb(documentId1, date1, username);
-      item1.setContentLength(Long.valueOf(contentLength));
+      item1.setContentLength(contentLength);
 
       ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents-yesterday.json");
       addParameter(event, "siteId", siteId);
@@ -524,11 +507,11 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
 
       // then
       final int mapsize = 3;
-      Map<String, String> m = fromJson(response, Map.class);
+      Map<String, Object> m = fromJson(response, Map.class);
       assertEquals(mapsize, m.size());
       assertEquals("200.0", String.valueOf(m.get("statusCode")));
-      assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-      DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
+      DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
       List<DynamicObject> documents = resp.getList("documents");
       assertEquals(1, documents.size());
@@ -544,7 +527,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments08() throws Exception {
     // given
@@ -558,14 +540,14 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
     String response = handleRequest(event);
 
     // then
-    Map<String, String> m = fromJson(response, Map.class);
+    Map<String, Object> m = fromJson(response, Map.class);
 
     final int mapsize = 3;
     assertEquals(mapsize, m.size());
     assertEquals("401.0", String.valueOf(m.get("statusCode")));
-    assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-    ApiResponseError resp = fromJson(m.get("body"), ApiResponseError.class);
-    assertEquals("fkq access denied to siteId (" + siteId + ")", resp.getMessage());
+    assertCorsHeaders((Map<String, Object>) m.get("headers"));
+    Map<String, Object> resp = fromJson((String) m.get("body"), Map.class);
+    assertEquals("fkq access denied to siteId (" + siteId + ")", resp.get("message"));
   }
 
   /**
@@ -573,7 +555,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments09() throws Exception {
     // given
@@ -586,14 +567,14 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
     String response = handleRequest(event);
 
     // then
-    Map<String, String> m = fromJson(response, Map.class);
+    Map<String, Object> m = fromJson(response, Map.class);
 
     final int mapsize = 3;
     assertEquals(mapsize, m.size());
     assertEquals("401.0", String.valueOf(m.get("statusCode")));
-    assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-    ApiResponseError resp = fromJson(m.get("body"), ApiResponseError.class);
-    assertEquals("fkq access denied to siteId (" + siteId + ")", resp.getMessage());
+    assertCorsHeaders((Map<String, Object>) m.get("headers"));
+    Map<String, Object> resp = fromJson((String) m.get("body"), Map.class);
+    assertEquals("fkq access denied to siteId (" + siteId + ")", resp.get("message"));
   }
 
   /**
@@ -601,27 +582,25 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments10() throws Exception {
     // given
-    String siteId = null;
 
     ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents03.json");
-    addParameter(event, "siteId", siteId);
+    addParameter(event, "siteId", null);
     setCognitoGroup(event, "Finance");
 
     // when
     String response = handleRequest(event);
 
     // then
-    Map<String, String> m = fromJson(response, Map.class);
+    Map<String, Object> m = fromJson(response, Map.class);
 
     final int mapsize = 3;
     assertEquals(mapsize, m.size());
     assertEquals("200.0", String.valueOf(m.get("statusCode")));
-    assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-    DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+    assertCorsHeaders((Map<String, Object>) m.get("headers"));
+    DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
     List<DynamicObject> documents = resp.getList("documents");
     assertEquals(0, documents.size());
@@ -632,26 +611,23 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments11() throws Exception {
     // given
-    String siteId = DEFAULT_SITE_ID;
-
     ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents03.json");
-    addParameter(event, "siteId", siteId);
+    addParameter(event, "siteId", DEFAULT_SITE_ID);
     setCognitoGroup(event, "Finance Bleh");
 
     // when
     String response = handleRequest(event);
 
     // then
-    Map<String, String> m = fromJson(response, Map.class);
+    Map<String, Object> m = fromJson(response, Map.class);
 
     final int mapsize = 3;
     assertEquals(mapsize, m.size());
     assertEquals("401.0", String.valueOf(m.get("statusCode")));
-    assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
+    assertCorsHeaders((Map<String, Object>) m.get("headers"));
     assertEquals("{\"message\":\"fkq access denied to siteId (default)\"}", m.get("body"));
   }
 
@@ -660,7 +636,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments12() throws Exception {
     // given
@@ -674,13 +649,13 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
     String response = handleRequest(event);
 
     // then
-    Map<String, String> m = fromJson(response, Map.class);
+    Map<String, Object> m = fromJson(response, Map.class);
 
     final int mapsize = 3;
     assertEquals(mapsize, m.size());
     assertEquals("200.0", String.valueOf(m.get("statusCode")));
-    assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-    DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+    assertCorsHeaders((Map<String, Object>) m.get("headers"));
+    DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
     List<DynamicObject> documents = resp.getList("documents");
     assertEquals(0, documents.size());
@@ -691,7 +666,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments13() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -703,13 +677,13 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      Map<String, String> m = fromJson(response, Map.class);
+      Map<String, Object> m = fromJson(response, Map.class);
 
       final int mapsize = 3;
       assertEquals(mapsize, m.size());
       assertEquals("200.0", String.valueOf(m.get("statusCode")));
-      assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-      DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
+      DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
       List<DynamicObject> documents = resp.getList("documents");
       assertEquals(0, documents.size());
@@ -721,7 +695,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments14() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -734,7 +707,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String username = UUID.randomUUID() + "@formkiq.com";
       String documentId = ID.uuid();
       DocumentItemDynamoDb item = new DocumentItemDynamoDb(documentId, date, username);
-      item.setContentLength(Long.valueOf(contentLength));
+      item.setContentLength(contentLength);
 
       ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents.json");
       addParameter(event, "siteId", siteId);
@@ -745,13 +718,13 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      Map<String, String> m = fromJson(response, Map.class);
+      Map<String, Object> m = fromJson(response, Map.class);
 
       final int mapsize = 3;
       assertEquals(mapsize, m.size());
       assertEquals("200.0", String.valueOf(m.get("statusCode")));
-      assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-      DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
+      DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
       List<DynamicObject> documents = resp.getList("documents");
       assertEquals(1, documents.size());
@@ -765,7 +738,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments15() throws Exception {
 
@@ -778,7 +750,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String username = UUID.randomUUID() + "@formkiq.com";
       String documentId = ID.uuid();
       DocumentItemDynamoDb item = new DocumentItemDynamoDb(documentId, date, username);
-      item.setContentLength(Long.valueOf(contentLength));
+      item.setContentLength(contentLength);
 
       ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents.json");
       addParameter(event, "siteId", siteId);
@@ -811,7 +783,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleGetDocuments16() throws Exception {
 
@@ -822,7 +793,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String username = UUID.randomUUID() + "@formkiq.com";
       String documentId = ID.uuid();
       DocumentItemDynamoDb item = new DocumentItemDynamoDb(documentId, date, username);
-      item.setContentLength(Long.valueOf(contentLength));
+      item.setContentLength(contentLength);
 
       ApiGatewayRequestEvent event = toRequestEvent("/request-get-documents.json");
       addParameter(event, "siteId", siteId);
@@ -844,7 +815,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandleOptionsDocuments01() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -864,12 +834,12 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      Map<String, String> m = fromJson(response, Map.class);
+      Map<String, Object> m = fromJson(response, Map.class);
 
-      final int mapsize = 3;
+      final int mapsize = 2;
       assertEquals(mapsize, m.size());
       assertEquals("200.0", String.valueOf(m.get("statusCode")));
-      assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
     }
   }
 
@@ -883,11 +853,9 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    */
   private ApiGatewayRequestEvent postDocumentsRequest(final String siteId, final String group,
       final String body) {
-    ApiGatewayRequestEvent event = new ApiGatewayRequestEventBuilder().method("post")
-        .resource("/documents").path("/documents").group(group).user("joesmith")
+    return new ApiGatewayRequestEventBuilder().method("post").resource("/documents")
+        .path("/documents").group(group).user("joesmith")
         .queryParameters(siteId != null ? Map.of("siteId", siteId) : null).body(body).build();
-
-    return event;
   }
 
   /**
@@ -895,7 +863,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments01() throws Exception {
     for (String siteId : Arrays.asList(DEFAULT_SITE_ID, ID.uuid())) {
@@ -1024,7 +991,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments02() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -1036,14 +1002,14 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      Map<String, String> m = fromJson(response, Map.class);
+      Map<String, Object> m = fromJson(response, Map.class);
 
       final int mapsize = 3;
       assertEquals(mapsize, m.size());
       assertEquals("201.0", String.valueOf(m.get("statusCode")));
-      assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
 
-      DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+      DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
       assertNotNull(resp.get("documentId"));
       assertNull(resp.get("next"));
@@ -1077,10 +1043,10 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      String expected = "{" + getHeaders() + ",\"body\":\""
-          + "{\\\"message\\\":\\\"request body is required\\\"}\",\"statusCode\":400}";
-
-      assertEquals(expected, response);
+      Map<String, Object> m = fromJson(response, Map.class);
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
+      assertEquals("400.0", String.valueOf(m.get("statusCode")));
+      assertEquals("{\"message\":\"request body is required\"}", String.valueOf(m.get("body")));
     }
   }
 
@@ -1089,7 +1055,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments04() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -1101,13 +1066,13 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      Map<String, String> m = fromJson(response, Map.class);
+      Map<String, Object> m = fromJson(response, Map.class);
 
       final int mapsize = 3;
       assertEquals(mapsize, m.size());
       assertEquals("400.0", String.valueOf(m.get("statusCode")));
-      assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-      DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
+      DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
       assertNull(resp.get("documentId"));
       assertNull(resp.get("next"));
@@ -1120,7 +1085,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments05() throws Exception {
     for (String siteId : Arrays.asList(null, ID.uuid())) {
@@ -1132,13 +1096,13 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      Map<String, String> m = fromJson(response, Map.class);
+      Map<String, Object> m = fromJson(response, Map.class);
 
       final int mapsize = 3;
       assertEquals(mapsize, m.size());
       assertEquals("400.0", String.valueOf(m.get("statusCode")));
-      assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-      DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
+      DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
       assertNull(resp.get("documentId"));
       assertNull(resp.get("next"));
@@ -1162,10 +1126,10 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       String response = handleRequest(event);
 
       // then
-      String expected = "{" + getHeaders() + ",\"body\":\""
-          + "{\\\"message\\\":\\\"invalid JSON body\\\"}\",\"statusCode\":400}";
-
-      assertEquals(expected, response);
+      Map<String, Object> m = fromJson(response, Map.class);
+      assertCorsHeaders((Map<String, Object>) m.get("headers"));
+      assertEquals("400.0", String.valueOf(m.get("statusCode")));
+      assertEquals("{\"message\":\"invalid JSON body\"}", String.valueOf(m.get("body")));
     }
   }
 
@@ -1184,10 +1148,11 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
     String response = handleRequest(event);
 
     // then
-    String expected = "{" + getHeaders() + ",\"body\":\""
-        + "{\\\"message\\\":\\\"fkq access denied to siteId (demo)\\\"}\",\"statusCode\":401}";
-
-    assertEquals(expected, response);
+    Map<String, Object> m = fromJson(response, Map.class);
+    assertCorsHeaders((Map<String, Object>) m.get("headers"));
+    assertEquals("401.0", String.valueOf(m.get("statusCode")));
+    assertEquals("{\"message\":\"fkq access denied to siteId (demo)\"}",
+        String.valueOf(m.get("body")));
   }
 
   /**
@@ -1195,7 +1160,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments08() throws Exception {
     // given
@@ -1205,13 +1169,13 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
     String response = handleRequest(event);
 
     // then
-    Map<String, String> m = fromJson(response, Map.class);
+    Map<String, Object> m = fromJson(response, Map.class);
 
     final int mapsize = 3;
     assertEquals(mapsize, m.size());
     assertEquals("201.0", String.valueOf(m.get("statusCode")));
-    assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
-    DynamicObject resp = new DynamicObject(fromJson(m.get("body"), Map.class));
+    assertCorsHeaders((Map<String, Object>) m.get("headers"));
+    DynamicObject resp = new DynamicObject(fromJson((String) m.get("body"), Map.class));
 
     String documentId = resp.get("documentId").toString();
     assertNull(resp.get("next"));
@@ -1228,7 +1192,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments09() throws Exception {
     // given
@@ -1238,12 +1201,12 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
     String response = handleRequest(event);
 
     // then
-    Map<String, String> m = fromJson(response, Map.class);
+    Map<String, Object> m = fromJson(response, Map.class);
 
     final int mapsize = 3;
     assertEquals(mapsize, m.size());
     assertEquals("401.0", String.valueOf(m.get("statusCode")));
-    assertEquals(getHeaders(), "\"headers\":" + GsonUtil.getInstance().toJson(m.get("headers")));
+    assertCorsHeaders((Map<String, Object>) m.get("headers"));
   }
 
   /**
@@ -1251,7 +1214,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments10() throws Exception {
     for (String siteId : Arrays.asList(DEFAULT_SITE_ID, ID.uuid())) {
@@ -1281,7 +1243,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       assertNotNull(documents.get(i).getString("uploadUrl"));
       assertNotNull(documents.get(i++).getString("documentId"));
       assertNotNull(documents.get(i).getString("uploadUrl"));
-      assertNotNull(documents.get(i++).getString("documentId"));
+      assertNotNull(documents.get(i).getString("documentId"));
 
       String documentId = documents.get(0).getString("documentId");
       String key = SiteIdKeyGenerator.createS3Key(siteId, documentId);
@@ -1294,7 +1256,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments11() throws Exception {
     for (String siteId : Arrays.asList(DEFAULT_SITE_ID, ID.uuid())) {
@@ -1334,7 +1295,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments12() throws Exception {
     for (String siteId : Arrays.asList(DEFAULT_SITE_ID, ID.uuid())) {
@@ -1368,7 +1328,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments15() throws Exception {
     for (String siteId : Arrays.asList(DEFAULT_SITE_ID, ID.uuid())) {
@@ -1420,7 +1379,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments16() throws Exception {
     // given
@@ -1460,7 +1418,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments17() throws Exception {
     // given
@@ -1478,7 +1435,7 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
       Map<String, Object> data = fromJson(event.getBody(), Map.class);
       List<Map<String, Object>> metadata = new ArrayList<>();
       metadata.add(Map.of("key", "ad1", "value", filled));
-      metadata.add(Map.of("key", "ad2", "values", Arrays.asList(filled)));
+      metadata.add(Map.of("key", "ad2", "values", List.of(filled)));
 
       data.put("metadata", metadata);
       event.setBody(GsonUtil.getInstance().toJson(data));
@@ -1502,7 +1459,6 @@ public class ApiDocumentsRequestTest extends AbstractRequestHandler {
    *
    * @throws Exception an error has occurred
    */
-  @SuppressWarnings("unchecked")
   @Test
   public void testHandlePostDocuments18() throws Exception {
     // given
